<resources>
    <string name="app_name">Carrier</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String related to main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_active_jobs">ACTIVE JOBS</string>
    <string name="title_pending">PENDING JOBS</string>
    <string name="title_history">HISTORY</string>
    <string name="title_user_menu">USER MENU</string>
    <string name="holder_receiver_name">RECEIVER NAME</string>
    <string name="dummy_sentence">Lorem ipsum dolor sit amet</string>
    <string name="dummy_sentences">Lorem ipsum dolor sit amet, ne cum ipsum atqui voluptaria, vocibus intellegam vis et</string>
    <string name="title_nav_active">Active</string>
    <string name="title_nav_pending">Pending</string>
    <string name="title_nav_history">History</string>
    <string name="title_nav_user">User</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_reject">REJECT</string>
    <string name="holder_item_name">ITEM NAME</string>

    <!-- String related to confirmation -->
    <string name="title_rejection_details">Rejection details</string>
    <string name="hint_details">Details</string>
    <string name="title_secondary_details">OPTIONAL DETAILS</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_cancel">CANCEL</string>
    <string name="title_activity_confirmation">CONFIRMATION</string>
    <string name="title_confirmation_details">Confirmation Details</string>
    <string name="radio_hint_registered">Received by registered recipient</string>
    <string name="radio_hint_delegation">Received by delegation</string>
    <string name="title_hint_dialog_continue">CONTINUE TO MAP</string>
    <string name="title_dialog_continue">Continue Delivery?</string>
    <string name="button_continue">CONTINUE</string>
    <string name="title_activity_maps">MAP</string>
    <string name="button_start_navigation">START NAVIGATION</string>
    <string name="button_start">START DELIVERY</string>
    <string name="shipment_remarks">Total Stop : {1}</string>
    <string name="title_marker_my_location">My Location</string>
    <string name="menu_go_to_map">Go to map</string>
    <string name="toast_long_press_info">Long press for more info</string>
    <string name="message_failed_get_route">Failed to get route</string>
    <string name="title_calculating_route">Calculating Route</string>
    <string name="message_calculating_route">Calculating best route</string>
    <string name="shipment_number">Shipment {1}</string>
    <string name="toast_ask_gmap_installation">Please install google map for navigation</string>
    <string name="label_button_change_pass">Change Password</string>
    <string name="label_button_logout">Logout</string>
    <string name="label_id">ID</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_email">email</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Addess</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="button_logout">Logout</string>
    <string name="label_logout_dialog">Are you sure?</string>
    <string name="label_complement_logout_dialog">Logout</string>
</resources>
