<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:includeFontPadding="false"
            android:text="@string/title_hint_dialog_continue"
            android:textColor="@color/brokenGrey"
            android:textSize="13sp"
            tools:fontFamily="sans-serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:includeFontPadding="false"
            android:text="@string/title_dialog_continue"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            tools:fontFamily="sans-serif" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button"
            android:text="@string/button_continue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_cancel_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/bg_alert"
            android:text="@string/button_cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>