<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:includeFontPadding="false"
            android:text="@string/label_complement_logout_dialog"
            android:textColor="@color/brokenGrey"
            android:textSize="13sp"
            tools:fontFamily="sans-serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:includeFontPadding="false"
            android:text="@string/label_logout_dialog"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            tools:fontFamily="sans-serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_weight="1"
                android:background="@drawable/bg_alert"
                android:text="@string/button_logout"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_cancel_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:text="@string/button_cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>