<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aditya.nayanda.shippingmanager.activities.LoginActivity">

    <android.support.constraint.Guideline
        android:id="@+id/splash_logo_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/splash_logo_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/splash_logo_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/splash_logo_end"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/pertamina_logo_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/pertamina_logo_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/login_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_logo_bottom">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:fontFamily="sans-serif"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/login_footer_guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/login_footer_guideline"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:orientation="horizontal"-->
    <!--app:layout_constraintGuide_begin="400dp" />-->

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/carrier"
        android:transitionName="logo"
        app:layout_constraintBottom_toBottomOf="@id/splash_logo_bottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/splash_logo_end"
        app:layout_constraintStart_toStartOf="@id/splash_logo_start"
        app:layout_constraintTop_toTopOf="@id/splash_logo_top" />

    <ImageView
        android:id="@+id/pertamina_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="9dp"
        android:src="@drawable/pertamina_logo_type"
        android:transitionName="pertamina_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pertamina_logo_top" />
</android.support.constraint.ConstraintLayout>
