<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brokenWhite"
    android:orientation="vertical"
    tools:context="aditya.nayanda.shippingmanager.activities.ConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_card"
            android:elevation="2dp"
            android:padding="18dp">

            <android.support.constraint.Guideline
                android:id="@+id/receiver_photo_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.38" />

            <android.support.constraint.Guideline
                android:id="@+id/receiver_photo_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.62" />

            <ImageView
                android:id="@+id/receiver_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/drawable_grey_circle"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/receiver_photo_end"
                app:layout_constraintStart_toEndOf="@id/receiver_photo_start"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/receiver_photo">

                <TextView
                    android:id="@+id/receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/holder_receiver_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/receiver_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/dummy_sentence"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/brokenGrey" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.constraint.Guideline
                        android:id="@+id/divider_details"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.25" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/brokenGrey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/divider_details"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/item_details_icon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/drawable_grey_circle"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@id/divider_details"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/divider_details"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/item_name_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/holder_item_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/item_detail_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/dummy_sentence"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/item_address_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/dummy_sentences"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/bg_button"
            android:elevation="2dp"
            android:text="@string/button_confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/bg_alert"
            android:elevation="2dp"
            android:text="@string/button_reject"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
