<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_card"
        android:elevation="2dp">

        <android.support.constraint.Guideline
            android:id="@+id/content_guide_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/content_guide_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Guideline
            android:id="@+id/picture_guide_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.22" />

        <android.support.constraint.Guideline
            android:id="@+id/picture_guide_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/picture_guide_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/picture_guide_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/drawable_grey_circle"
            app:layout_constraintBottom_toTopOf="@id/picture_guide_bottom"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/picture_guide_end"
            app:layout_constraintStart_toEndOf="@id/picture_guide_start"
            app:layout_constraintTop_toBottomOf="@id/picture_guide_top" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="21dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/content_guide_end"
            app:layout_constraintStart_toEndOf="@id/content_guide_start"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:fontFamily="sans-serif"
                android:text="@string/holder_item_name"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/dummy_sentence"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/item_address_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/dummy_sentences"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>